Fix background on mobile.

--- a/static/style.scss
+++ b/static/style.scss
@@ -54,8 +54,7 @@ body {
 	width:100%;
 	height:100%;
 	overflow-x:hidden;
-
-	background:linear-gradient(130deg, black, #622);
+	background-image:linear-gradient(130deg, black, #622);
 	background-attachment: fixed;
 	color:white;
 	font:21px 'gohufontuni-14',monospace;
